<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/result_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="22dp"
    tools:context=".ResultActivity">
    <TextView
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/result"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image"
        android:src="@drawable/prize" />

    <TextView
        android:id="@+id/cong_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hey_congratulations"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:text="name" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/secondary_text_dark"
        android:textSize="17sp"
        tools:text="Your Score is 3 out of 5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:backgroundTint="@color/desc_color"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="27sp" />
</LinearLayout>