<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/quiz_app"
        android:textColor="@color/off_black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/off_white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/greeting"
                android:textColor="@color/off_black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/ask_name"
                android:textColor="@color/desc_color"
                android:textSize="19sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/material_text_filed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_inp_color"
                    android:textColorHint="@color/text_color_hnt" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_ply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/desc_color"
                android:text="@string/tap_to_go"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>