<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/off_white"
    tools:context=".QuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/question_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="@color/off_black"
            tools:text="Identify this Image"
            />
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ques_img"
            tools:src="@drawable/bird"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            >
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="5"
                android:minHeight="30dp"
                android:progress="2"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"
                />
            <TextView
                android:id="@+id/progress_bar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:textSize="20sp"
                android:text="@string/_2_5"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/op1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/op_button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/off_black"
            android:textSize="16sp"
            tools:text="Option 1" />

        <TextView
            android:id="@+id/op2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/op_button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/off_black"
            android:textSize="16sp"
            tools:text="Option 2" />

        <TextView
            android:id="@+id/op3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/op_button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/off_black"
            android:textSize="16sp"
            tools:text="Option 3" />

        <TextView
            android:id="@+id/op4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/op_button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/off_black"
            android:textSize="16sp"
            tools:text="Option 4" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#3d325d"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>